src/css/main.css
/* General CSS */
body {
  font-family: ubuntu, sans-serif;
  line-height: 1.42857143;
  overflow-x: hidden;
}

* {
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
}

a {
  color: #337ab7;
  text-decoration: none;
}

.noselect, [ng-click] {
  -webkit-user-select: none;
  user-select: none;
  cursor: default;
}

.top-padded {
  padding-top: 30px;
}

h3 {
  margin-top: 10px;
}

.disabled, .disabled>a {
  background-color: #ccc !important;
  cursor: not-allowed !important;
  color: initial !important;
}

a.glyphicon:hover {
  text-decoration: none;
}

input {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

li {
  display: block;
}

img {
  vertical-align: middle;
}

button, input, textarea {
  color: inherit;
  margin: 0;
  font: inherit;
}

button {
  -webkit-appearance: button;
  text-transform: none;
  overflow: visible;
  cursor: pointer;
}

button[disabled] {
  cursor: default;
}

[ng-click] {
  cursor: pointer;
}

h1, .send-message, .content, .instructions {
  text-align: center;
}

.nav-pills>li, .send-message, ul, .games-wrapper {
  padding: 0px;
}

body, .nav-pills>li>a, .send-message>li, .noMargin, ul {
  margin: 0;
}

.single-pill, .loader {
  float: none;
  margin: 0px auto;
}

.single-pill {
  max-width: 250px;
}

.single-pill>li {
  float: none !important;
}

.tag, .contact, .submit-g, .search {
  display: none;
  flex: 1;
}

.flex {
  display: flex;
  align-items: center;
}

/* Home view CSS */
.content {
  font-size: 18px;
  width: 80%;
  background: #FEFEFE;
  border: 1px solid #CCC;
  margin: 35px auto;
  padding-left: 11px;
  padding-right: 11px;
  max-width: 900px;
  padding-bottom: 30px;
  border-radius: 15px;
}

.game-info-container {
  margin: 5px;
  background-color: #fefefe;
  border-radius: 15px;
  width: 275px;
  flex-grow: 1;
  min-width: 25%;
  position: relative;
  height: 260px;
}

img:before {
  display: block;
  position: absolute;
  background-color: rgb(230, 230, 230);
  border: 2px dotted rgb(200, 200, 200);
  border-radius: 5px;
  font-size: 12px;
  font-family: ubuntu, 'Glyphicons Halflings';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;
}

img.app-icon:before {
  width: 72px;
  height: 66px;
  padding: 5px;
  content: "\e060" " Couldn't load image of " attr(alt);
}

.title>img:before {
  width: 13px;
  height: 16px;
  padding-left: 3px;
  content: "\e060";
}

@keyframes spin{0%{transform:rotate(45deg)}17%{transform:rotate(300deg)}34%{transform:rotate(90deg)}51%{transform:rotate(450deg)}66%{transform:rotate(135deg)}83%{transform:rotate(495deg)}100%{transform:rotate(405deg)}}

.loader {
  animation-name: spin;
  animation-duration: 5s;
  animation-iteration-count: infinite;
}

.app-icon {
  width: 50%;
  max-width: 80px;
  min-height: 80px;
  border-radius: 15px;
  margin: 8px;
}

.app-desc {
  max-width: 300px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 17.5px;
  word-wrap: break-word;
  padding: 0 5px;
}

#games {
  display: flex;
  flex-wrap: wrap;
  margin: -10px;
  padding: 5px;
}

.title {
  background-color: hsla(0,0%,80%,1);
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  text-align: left;
  padding: 2px 7.5px;
  font-variant: small-caps;
  color: hsla(0,0%,20%,1);
  letter-spacing: 2px;
}

.title>img {
  width: 20px;
  height: 20px;
  margin: 2px 5px;
  margin-top: -3px;
  border-radius: 4px;
}

.action-panel {
  display: flex;
  justify-content: space-around;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.action-panel>* {
  padding: 10px;
  border-radius: 20px;
  margin: 0 5px 10px;
}
.action-panel>*:hover {
    background: #eee;
}
.action-panel>*:active {
    background: #333;
    color: #fff;
}

/* Header CSS */
header {
  width: 100%;
  background: #FEFEFE;
  border: 1px solid #CCC;
  letter-spacing: 1px;
  height: 66px;
  z-index: 1000;
  top: 0;
}

@media (min-height: 570px) {
  header {
    position: fixed;
  }

  spacer {
    display: block;
    height: 66px;
  }
}

h1 {
  font-size: 26px;
}

/* Navigation menu CSS */
.nav-pills {
  display: flex;
  flex-wrap: wrap;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.nav-pills>li {
  margin: 1px;
  -webkit-flex: 1 1 auto;
  flex: 1 1 auto;
}

.nav-pills>li>a {
  color: #1a1a1a;
  display: block;
  padding: 10px 15px;
  border-radius: 5px;
  white-space: nowrap;
  min-height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.nav-pills>li>a>.glyphicon {
  margin-right: 4px;
}

.nav-pills > li > a:hover {
  background-color: #eee;
}

.nav-pills > li > a:active {
  color: #fff;
  background-color: #1a1a1a;
}

.nav-pills>li.active>a {
  color: #fff !important;
  background-color: #1a1a1a !important;
}

.nav-pills>li.active {
  display: block;
}

.search>input {
  max-width: 145px;
  min-width: 100%;
  padding: 10px 15px;
  border: 1px solid #ccc;
  border-radius: 5px;
  background: url(/src/img/search.png) 96% / 35px no-repeat;
}

.toggle-mobile {
  display: flex !important;
  justify-content: center;
  align-items: center;
  width: 115px;
}

.toggle-mobile>span {
  line-height: 1.2;
  flex: 1;
}

.toggle-mobile>img {
  flex: 1;
  height: 23px;
}

@media (min-width: 277px) {
  .search {
    display: block;
  }
}

@media (min-width: 343px) {
  .search {
    display: block;
  }
}

@media (min-width: 426px) {
  .contact {
    display: block;
  }
}

@media (min-width: 560px) {
  .submit-g {
    display: block;
  }
}

@media (min-width: 605px) {
  .tag:nth-child(6) {
    display: block;
  }
}

@media (min-width: 743px) {
  .tag:nth-child(7) {
    display: block;
  }
}

@media (min-width: 859px) {
  .tag:nth-child(8) {
    display: block;
  }
}

@media (min-width: 908px) {
  .tag:nth-child(9) {
    display: block;
  }
}

@media (min-width: 1031px) {
  .tag:nth-child(10) {
    display: block;
  }
}

@media (min-width: 1073px) {
  .tag:nth-child(11) {
    display: block;
  }
}

@media (min-width: 1120px) {
  .tag:nth-child(12) {
    display: block;
  }
}

.show-all>li {
  display: block !important;
}

/* Game view CSS */
embed {
  background-color:#fff;
  max-width: 100%;
}

#wrapper {
  width: 95%;
  height: 85%;
  margin-left: auto;
  margin-top: auto;
  margin-bottom: 15px;
  margin-right: auto;
  text-align: center;
}

.instructions {
  word-wrap: break-word;
  flex: 4;
}

.like-panel>.glyphicon {
  background: #333;
  border-radius: 20px;
  padding: 10px;
}

.com-container {
  background-color: #4a4a4a;
  padding: 13px;
  border-radius: 10px;
  margin-bottom: 20px;
  overflow: auto;
}

.com {
  margin-bottom: 8px;
  text-align: left;
}

.com-author {
  font-variant: small-caps;
  font-size: medium;
  float: left;
}

.com-date {
  float: right;
  font-size: small;
}

.redirect-notice>a {
  color: white;
}

.redirect-notice>a:hover {
  color: #ccc;
}

#games, .games-wrapper {
  background-color: transparent;
  border: 0px;
}

.comments {
  min-width: 280px;
  flex: 2;
  font-size: 1.2em;
  max-width: 500px;
}

.game-sec {
  color: #fbfbfb;
}

.back-arrow {
  font-size: 1.5em !important;
  color: #fbfbfb !important;
}

.back-arrow:hover {
  color: #ddd !important;
}

.back-arrow:active {
  color: #666 !important;
}

.back-container {
  text-align:left;
  padding-left: 30px;
  margin-top: 20px;
  margin-bottom: 15px;
}

.absolute-container {
  top: 20px;
  left: 30px;
  position: absolute;
  padding: 0;
  margin: 0;
}

.send-message {
  min-height: 100%;
}

.send-message>a {
  min-height: 100%;
  min-width: 100%;
  display: flex;
  align-items: center;
  color: #fff;
  background-color: #777;
  border: 2px solid #444;
  font-size: 1.5em;
  border-radius: 10px;
}

.send-message>a::before {
  margin: auto;
}

.send-message>a:active {
  background-color: #AFBECC;
}

.comment-field {
  width: 100%;
  background-color: #777;
  border: 2px solid #444;
  border-radius: 4px;
}

.comment-field::-webkit-input-placeholder {
  color: #ddd;
}

/* Submit form CSS */
.submit-form>input, .submit-form>textarea, .mail-input {
  display: block;
  margin: 10px;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid #bbb;
  border-radius: 3px;
}

select:focus, input:focus, textarea:focus {
  outline: 0;
  border: 2px solid #bbb !important;
}

.submit-form>textarea {
  max-width: 80%;
}

.input-error {
  width: 80%;
  margin: auto;
  padding: 3px;
}

.red-border::-webkit-input-placeholder, textarea.ng-touched.ng-invalid {
  color: #a94442;
}

.red-border, .mail-input.ng-touched.ng-invalid, textarea.ng-touched.ng-invalid {
  border-color: #a94442;
  background-color: #f2dede;
}

.list-group-item {
  margin-top: 15px;
}

input[type="checkbox"] {
  display: none;
}

input[type="checkbox"] + label>span {
  display: inline-block;
  width: 23px;
  height: 23px;
  margin: -3px 4px 0 0;
  vertical-align: middle;
  background: #eee;
  cursor: pointer;
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 2px;
}

input[type="checkbox"]:checked + label>span {
  background: #666;
  color: #fff;
  position: relative;
  top: 1px;
  display: inline-block;
  font-family: 'Glyphicons Halflings';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

input[type="checkbox"]:checked + label>span:before {
  content: "\e013";
  font-size: smaller;
  display: block;
  margin-top: 1.5px;
}

/* Mail-list lightbox CSS */
/* (Commented out until mailing system is completed)
.lightbox {
  display: none !important;
  opacity: 0;
  position: fixed;
  z-index: 999;
  width: 100%;
  height: 100%;
  top: 0;
  background: rgba(0,0,0,0.8);
  transition: opacity 1s ease-in-out;
}

.lightbox>.content {
  max-width: 720px;
}

@media (min-width: 768px) {
  .mail-icon>span {
    min-height: 210px;
    line-height: 210px;
  }
}

.mail-icon>span {
  font-size: 100px;
}

.mail-menu>li {
  margin-left: 0px !important;
}

.mail-input {
  margin-top: 5px;
  margin-bottom: 5px;
}

.mail-menu>li>a>button {
  width: 100%;
  height: 100%;
  background-color: transparent;
  border: 0px;
}

#menu {
  overflow: auto;
}

form.com-container>div>textarea {
  transition: height 0.5s ease-in-out;
  resize: none;
}*/

/* Cookie-box CSS */
.cookie-box {
  position: fixed;
  bottom: 0;
  min-width: 100%;
  margin-bottom: 0;
  padding-top: 12px;
  padding-bottom: 12px;
  box-shadow: 0 12px 200px #888,0 -10px 75px #888;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  z-index: 1000;
  border-radius: 15px 15px 0 0;
}

/* Toggler button CSS */
.toggler {
  background: #ddd;
  height: 28px;
  width: 54px;
  border-radius: 20px;
  border: 1px solid #aaa;
}

.toggler:before {
  display: block;
  background: #fff;
  content: " ";
  width: 24px;
  height: 24px;
  border-radius: 15px;
  border: 1px solid #999;
  box-shadow: 0 0 7px rgba(0,0,0,0.6);
  transition: margin 0.2s ease-in-out, background 0.2s ease-in-out, width 0.2s ease-in-out;
}

.toggler.active {
  background: #dff0d8;
}

.toggler.active:before {
  margin: 0 0 0 26px;
}

.toggler:active:before {
  width: 29px;
}

.toggler.active:active:before {
  margin: 0 0 0 21px;
}

